--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@angular/platform-browser-dynamic": "10.0.1",
     "@angular/router": "10.0.1",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@types/google.maps": "^3.51.0",
+    "@types/googlemaps": "^3.43.3",
+    "@types/stripe-v3": "^3.1.27",
     "bootstrap": "4.1.2",
     "core-js": "3.6.4",
     "jquery": "3.2.1",
