--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "@angular/platform-browser-dynamic": "10.0.1",
     "@angular/router": "10.0.1",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@ng-select/ng-select": "^5.1.0",
     "@types/google.maps": "^3.51.0",
     "@types/googlemaps": "^3.43.3",
     "@types/stripe-v3": "^3.1.27",
     "bootstrap": "4.1.2",
+    "bootstrap-icons": "^1.10.5",
     "core-js": "3.6.4",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
+    "ng2-date-picker": "^16.0.0",
     "ng2-nouislider": "1.7.12",
     "ngx-image-cropper": "^3.1.9",
     "nouislider": "9.2.0",
