--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "core-js": "3.6.4",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
+    "moment": "^2.29.4",
     "ng2-date-picker": "^16.0.0",
     "ng2-nouislider": "1.7.12",
     "ngx-image-cropper": "^3.1.9",
