--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-image-cropper": "^3.1.9",
     "nouislider": "9.2.0",
     "popper.js": "1.14.4",
+    "primeng": "^16.3.1",
     "rxjs": "6.5.4",
     "rxjs-compat": "6.5.4",
     "sweetalert2": "^9.15.2",
